--- a/index.html
+++ b/index.html
@@ -2,4 +2,48 @@
 layout: default
 ---
 
-<h1>Dev</h1>
+<h1>Shelly Cloud was shut down on March 31, 2016</h1>
+
+<p>
+  Shelly Cloud was a Ruby application hosting service that makes your deployment painless.
+</p>
+
+<p>
+  It gave high speed servers, really simple deployment and full control over
+  the cloud layout. Shelly was easy to use and developer-centric. You could host a full
+  stack application for just €20 per month.
+</p>
+
+<p>
+  It was providing following services:
+</p>
+
+<ul>
+  <li>Support Ruby on Rails and any other Ruby framework through Rack</li>
+  <li>Deployment using Git push</li>
+  <li>PostgreSQL, MySQL, MongoDB, Elasticsearch and Redis databases with automatic and free backups</li>
+  <li>Local file storage with no extra setup required</li>
+  <li>Available caching at HTTP level using Varnish and at application level with Memcached</li>
+  <li>Custom cloud configuration using YAML file</li>
+  <li>A great support team that can personally help you deploy to Shelly at no extra cost</li>
+</ul>
+
+<h2>Why we decided to shut down</h2>
+
+<p>
+  Shelly Cloud started in 2010 as an internal project of <a href="http://ragnarson.com">Ragnarson</a>,
+  a Ruby consulting company we were working for. We built it to solve the problems we had
+  when deploying apps that we built for our customers. In 2012 we decided
+  to spin it off into a separate business. During this time we have learned a lot
+  about building products, both from the technical and business perspectives. We
+  did a lot of that learning on our own mistakes, and we did a few big things
+  wrong.
+</p>
+
+<p>
+  We would like to say thank you to everyone, for trust and being with us for
+  years. Building Shelly Cloud wouldn't be possible without you. Sorry that we've
+  failed your expectations, but it's time to move on.
+</p>
+
+<p>- The Shelly Cloud Team</p>
