Add app screenshots and info about core team

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Shelly Cloud was shut down on March 31, 2016</h1>
+<h1>Shelly Cloud was shut down on March 31st, 2016</h1>
 
 <p>
   Shelly Cloud was a Ruby application hosting service that makes your deployment painless.
@@ -28,7 +28,29 @@ layout: default
   <li>A great support team that can personally help you deploy to Shelly at no extra cost</li>
 </ul>
 
-<h2>Why we decided to shut down</h2>
+<p>Screenshots:</p>
+
+<div class="grid">
+  <div class="grid-item 1/2">
+    <a href="/img/img-ss-landing.png">
+      <img class="thumbnail thumbnail-bordered" src="/img/img-ss-landing.png" alt="Landing Screenshot">
+    </a>
+  </div>
+
+  <div class="grid-item 1/2">
+    <a href="/img/img-ss-docs.png">
+      <img class="thumbnail thumbnail-bordered" src="/img/img-ss-docs.png" alt="Docs Screenshot">
+    </a>
+    <a href="/img/img-ss-app.png">
+      <img class="thumbnail thumbnail-bordered" src="/img/img-ss-app.png" alt="App Screenshot">
+    </a>
+    <a href="/img/img-ss-terminal.png">
+      <img class="thumbnail thumbnail-bordered" src="/img/img-ss-terminal.png" alt="Terminal Screenshot">
+    </a>
+  </div>
+</div>
+
+<h2>Thank you!</h2>
 
 <p>
   Shelly Cloud started in 2010 as an internal project of <a href="http://ragnarson.com">Ragnarson</a>,
@@ -46,4 +68,53 @@ layout: default
   failed your expectations, but it's time to move on.
 </p>
 
-<p>- The Shelly Cloud Team</p>
+<p>
+  And we would also thank you everyone who was a part of our team in the past:
+  Katarzyna Jarmołkowicz, Ignacy Kasperowicz, Dominik Koślin, Michał
+  Kwiatkowski, Barbara Niewiadomska, Łukasz Piestrzeniewicz, Szymon Szypulski
+  and Stanisław Tuszyński
+</p>
+
+<div class="grid">
+  <div class="grid-item 1/6">
+    <a href="https://twitter.com/mgalkiewicz">
+      <img class="thumbnail" src="/img/avatar-macias.jpg" alt="Maciej Galkiewicz">
+    </a>
+  </div>
+
+  <div class="grid-item 1/6">
+    <a href="https://twitter.com/_codefu">
+      <img class="thumbnail" src="/img/avatar-grk.jpg" alt="Grzegorze Kolodziejczyk">
+    </a>
+  </div>
+
+  <div class="grid-item 1/6">
+    <a href="https://twitter.com/_bkzl">
+      <img class="thumbnail" src="/img/avatar-bkzl.jpg" alt="Bartlomiej Kozal">
+    </a>
+  </div>
+
+  <div class="grid-item 1/6">
+    <a href="https://twitter.com/smefju">
+      <img class="thumbnail" src="/img/avatar-maciek.jpg" alt="Maciej Malecki">
+    </a>
+  </div>
+
+  <div class="grid-item 1/6">
+    <a href="https://twitter.com/wijet">
+      <img class="thumbnail" src="/img/avatar-wijet.jpg" alt="Mariusz Pietrzyk">
+    </a>
+  </div>
+
+  <div class="grid-item 1/6">
+    <a href="https://twitter.com/s_wojtczak">
+      <img class="thumbnail" src="/img/avatar-seba.jpg" alt="Sebastian Wojtczak">
+    </a>
+  </div>
+</div>
+
+<p class="text-right">
+  - The Shelly Cloud Team<br>
+  Maciej Gałkiewicz, Grzegorz Kołodziejczyk, Bartłomiej Kozal,<br>
+  Maciej Małecki, Mariusz Pietrzyk, Sebastian Wojtczak
+</p>
