Contact email and twitter

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
   And we would also thank you everyone who was a part of our team in the past:
   Katarzyna Jarmołkowicz, Ignacy Kasperowicz, Dominik Koślin, Michał
   Kwiatkowski, Barbara Niewiadomska, Łukasz Piestrzeniewicz, Szymon Szypulski
-  and Stanisław Tuszyński
+  and Stanisław Tuszyński.
 </p>
 
 <div class="grid">
@@ -113,8 +113,16 @@ layout: default
   </div>
 </div>
 
-<p class="text-right">
-  - The Shelly Cloud Team<br>
-  Maciej Gałkiewicz, Grzegorz Kołodziejczyk, Bartłomiej Kozal,<br>
-  Maciej Małecki, Mariusz Pietrzyk, Sebastian Wojtczak
-</p>
+<div class="text-right">
+  <p>
+    - <strong>The Shelly Cloud Team</strong><br>
+    Maciej Gałkiewicz, Grzegorz Kołodziejczyk, Bartłomiej Kozal,<br>
+    Maciej Małecki, Mariusz Pietrzyk, Sebastian Wojtczak
+  </p>
+
+  <p class="text-small">
+    In case you need to contact us please use this email:
+    <a href="mailto:support@shellycloud.com">support@shellycloud.com</a>
+    or a Twitter account: <a href="https://twitter.com/shellycloud">@shellycloud</a>
+  </p>
+</div>
