Some rwd bcs it's easy to do with HP

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ layout: default
 <p>Screenshots:</p>
 
 <div class="grid">
-  <div class="grid-item 1/2">
+  <div class="grid-item 1/2 mobile-1/1">
     <a href="/img/img-ss-landing.png">
       <img class="thumbnail thumbnail-bordered" src="/img/img-ss-landing.png" alt="Landing Screenshot">
     </a>
   </div>
 
-  <div class="grid-item 1/2">
+  <div class="grid-item 1/2 mobile-1/1">
     <a href="/img/img-ss-docs.png">
       <img class="thumbnail thumbnail-bordered" src="/img/img-ss-docs.png" alt="Docs Screenshot">
     </a>
@@ -76,37 +76,37 @@ layout: default
 </p>
 
 <div class="grid">
-  <div class="grid-item 1/6">
+  <div class="grid-item 1/6 mobile-1/3">
     <a href="https://twitter.com/mgalkiewicz">
       <img class="thumbnail" src="/img/avatar-macias.jpg" alt="Maciej Galkiewicz">
     </a>
   </div>
 
-  <div class="grid-item 1/6">
+  <div class="grid-item 1/6 mobile-1/3">
     <a href="https://twitter.com/_codefu">
       <img class="thumbnail" src="/img/avatar-grk.jpg" alt="Grzegorze Kolodziejczyk">
     </a>
   </div>
 
-  <div class="grid-item 1/6">
+  <div class="grid-item 1/6 mobile-1/3">
     <a href="https://twitter.com/_bkzl">
       <img class="thumbnail" src="/img/avatar-bkzl.jpg" alt="Bartlomiej Kozal">
     </a>
   </div>
 
-  <div class="grid-item 1/6">
+  <div class="grid-item 1/6 mobile-1/3">
     <a href="https://twitter.com/smefju">
       <img class="thumbnail" src="/img/avatar-maciek.jpg" alt="Maciej Malecki">
     </a>
   </div>
 
-  <div class="grid-item 1/6">
+  <div class="grid-item 1/6 mobile-1/3">
     <a href="https://twitter.com/wijet">
       <img class="thumbnail" src="/img/avatar-wijet.jpg" alt="Mariusz Pietrzyk">
     </a>
   </div>
 
-  <div class="grid-item 1/6">
+  <div class="grid-item 1/6 mobile-1/3">
     <a href="https://twitter.com/s_wojtczak">
       <img class="thumbnail" src="/img/avatar-seba.jpg" alt="Sebastian Wojtczak">
     </a>
@@ -130,7 +130,7 @@ layout: default
 <h2>Our wonderful customers</h2>
 
 <div class="grid">
-  <div class="grid-item 1/2">
+  <div class="grid-item 1/2 mobile-1/1">
     <blockquote class="twitter-tweet" data-conversation="none" data-lang="en"><p lang="en" dir="ltr">Sad to see that <a href="https://twitter.com/ShellyCloud">@ShellyCloud</a> is shutting down. I wish you all the best for your focusing on Ruby consultancy at <a href="https://twitter.com/ragnarsoncom">@ragnarsoncom</a></p>&mdash; Cecile Veneziani (@cecilitse) <a href="https://twitter.com/cecilitse/status/675266544591597568">December 11, 2015</a></blockquote>
     <blockquote class="twitter-tweet" data-conversation="none" data-lang="en"><p lang="en" dir="ltr">Very sad to see <a href="https://twitter.com/ShellyCloud">@ShellyCloud</a> close, they&#39;ve been very supportive of the community and were pretty cool to use. Will miss you.</p>&mdash; Tobias Pfeiffer (@PragTob) <a href="https://twitter.com/PragTob/status/653641036338724864">October 12, 2015</a></blockquote>
     <blockquote class="twitter-tweet" data-conversation="none" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/ShellyCloud">@ShellyCloud</a> thanks for your great service and support!</p>&mdash; Thomas Winkler (@tomfarm) <a href="https://twitter.com/tomfarm/status/653625385263976448">October 12, 2015</a></blockquote>
@@ -142,7 +142,7 @@ layout: default
     <blockquote class="twitter-tweet" data-conversation="none" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/ShellyCloud">@ShellyCloud</a> 1:53 minutes in, got a complex app deployed, reconfigured the servers and running super-fast. i think i love you!</p>&mdash; Rahoul Baruah (@rahoulb) <a href="https://twitter.com/rahoulb/status/560813187243999232">January 29, 2015</a></blockquote>
   </div>
 
-  <div class="grid-item 1/2">
+  <div class="grid-item 1/2 mobile-1/1">
     <blockquote class="twitter-tweet" data-conversation="none" data-lang="en"><p lang="en" dir="ltr">Very sad to hear that <a href="https://twitter.com/ShellyCloud">@ShellyCloud</a> is closing down. It was a great alternative to Heroku.</p>&mdash; Vladimir Keleshev (@keleshev) <a href="https://twitter.com/keleshev/status/657109443537149952">October 22, 2015</a></blockquote>
     <blockquote class="twitter-tweet" data-conversation="none" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/ShellyCloud">@shellycloud</a> sorry to hear that. You had the best support, and great product too.</p>&mdash; Aleksander Dąbrowski (@_tjeden) <a href="https://twitter.com/_tjeden/status/653631470477643776">October 12, 2015</a></blockquote>
     <blockquote class="twitter-tweet" data-conversation="none" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/ShellyCloud">@ShellyCloud</a> What a pity! ShellyCloud is so wonderfull. I will miss ShellyCloud.</p>&mdash; Séverine Darlot (@SeverineDarlot) <a href="https://twitter.com/SeverineDarlot/status/653600561221271553">October 12, 2015</a></blockquote>
