--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ layout: default
 </p>
 
 <ul>
-  <li>Support Ruby on Rails and any other Ruby framework through Rack</li>
+  <li>Ruby on Rails and any other Ruby framework support through Rack</li>
   <li>Deployment using Git push</li>
   <li>PostgreSQL, MySQL, MongoDB, Elasticsearch and Redis databases with automatic and free backups</li>
   <li>Local file storage with no extra setup required</li>
   <li>Available caching at HTTP level using Varnish and at application level with Memcached</li>
-  <li>Custom cloud configuration using YAML file</li>
+  <li>Cloud layout configuration using YAML file</li>
   <li>A great support team that can personally help you deploy to Shelly at no extra cost</li>
 </ul>
 
@@ -57,19 +57,16 @@ layout: default
   a Ruby consulting company we were working for. We built it to solve the problems we had
   when deploying apps that we built for our customers. In 2012 we decided
   to spin it off into a separate business. During this time we have learned a lot
-  about building products, both from the technical and business perspectives. We
-  did a lot of that learning on our own mistakes, and we did a few big things
-  wrong.
+  about building products, both from the technical and business perspectives.
 </p>
 
 <p>
-  We would like to say thank you to everyone, for trust and being with us for
-  years. Building Shelly Cloud wouldn't be possible without you. Sorry that we've
-  failed your expectations, but it's time to move on.
+  We would like to say thank you to our customers, for trust and being with us for
+  years. Building Shelly Cloud wouldn't be possible without you.
 </p>
 
 <p>
-  And we would also thank you everyone who was a part of our team in the past:
+  We would also thank you all people who were a part of our team in the past:
   Katarzyna Jarmołkowicz, Ignacy Kasperowicz, Dominik Koślin, Michał
   Kwiatkowski, Barbara Niewiadomska, Łukasz Piestrzeniewicz, Szymon Szypulski
   and Stanisław Tuszyński.
