--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@ layout: default
   <li>A great support team that can personally help you deploy to Shelly at no extra cost</li>
 </ul>
 
-<p>Screenshots:</p>
-
 <div class="grid">
   <div class="grid-item 1/2 mobile-1/1">
     <a href="/img/img-ss-landing.png">
@@ -67,9 +65,9 @@ layout: default
 
 <p>
   We would also thank you all people who were a part of our team in the past:
-  Katarzyna Jarmołkowicz, Ignacy Kasperowicz, Dominik Koślin, Michał
-  Kwiatkowski, Barbara Niewiadomska, Łukasz Piestrzeniewicz, Szymon Szypulski
-  and Stanisław Tuszyński.
+  Katarzyna Jarmołkowicz, Ignacy Kasperowicz, Dominik Koślin, Dominika
+  Kucharska, Michał Kwiatkowski, Barbara Niewiadomska, Łukasz Piestrzeniewicz,
+  Szymon Szypulski and Stanisław Tuszyński.
 </p>
 
 <div class="grid">
