--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <h1>Shelly Cloud was shut down on March 31st, 2016</h1>
 
 <p>
-  Shelly Cloud was a Ruby application hosting service that makes your deployment painless.
+  Shelly Cloud was a Ruby application hosting service that made your deployment painless.
 </p>
 
 <p>
