--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <h1>Shelly Cloud was shut down on March 31st, 2016</h1>
 
 <p>
-  Shelly Cloud was a Ruby application hosting service that made your deployment painless.
+  Shelly Cloud was a Ruby application hosting service that made deployments painless.
 </p>
 
 <p>
@@ -25,7 +25,7 @@ layout: default
   <li>Local file storage with no extra setup required</li>
   <li>Available caching at HTTP level using Varnish and at application level with Memcached</li>
   <li>Cloud layout configuration using YAML file</li>
-  <li>A great support team that can personally help you deploy to Shelly at no extra cost</li>
+  <li>A great support team that personally helped in deploying to Shelly at no extra cost</li>
 </ul>
 
 <div class="grid">
@@ -53,7 +53,7 @@ layout: default
 <p>
   Shelly Cloud started in 2010 as an internal project of <a href="http://ragnarson.com">Ragnarson</a>,
   a Ruby consulting company we were working for. We built it to solve the problems we had
-  when deploying apps that we built for our customers. In 2012 we decided
+  when deploying apps that we developed for our customers. In 2012 we decided
   to spin it off into a separate business. During this time we have learned a lot
   about building products, both from the technical and business perspectives.
 </p>
@@ -64,7 +64,7 @@ layout: default
 </p>
 
 <p>
-  We would also thank you all people who were a part of our team in the past:
+  We would also thank all people who were a part of our team in the past:
   Katarzyna Jarmołkowicz, Ignacy Kasperowicz, Dominik Koślin, Dominika
   Kucharska, Michał Kwiatkowski, Barbara Niewiadomska, Łukasz Piestrzeniewicz,
   Szymon Szypulski and Stanisław Tuszyński.
