--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ layout: default
   </p>
 </div>
 
-<h2>Our wonderful customers</h2>
+<h2 id="clients-tweets">Our wonderful customers</h2>
 
 <div class="grid">
   <div class="grid-item 1/2 mobile-1/1">
