--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+
+
 <h1>Shelly Cloud was shut down on March 31st, 2016</h1>
 
 <p>
@@ -207,3 +209,14 @@ layout: default
 <p class="text-center margin-double-ends">
   <a href="https://twitter.com/ShellyCloud/likes">See more tweets from the community</a>
 </p>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-26155426-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
