--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@ layout: default
 
 <div class="grid">
   <div class="grid-item 1/6 mobile-1/3">
-    <a href="https://twitter.com/mgalkiewicz">
+    <a href="https://maciejgalkiewicz.com">
       <img class="thumbnail" src="/img/avatar-macias.jpg" alt="Maciej Galkiewicz">
     </a>
+    <a href="https://maciejgalkiewicz.com">Home page</a>
   </div>
 
   <div class="grid-item 1/6 mobile-1/3">
@@ -98,9 +99,10 @@ layout: default
   </div>
 
   <div class="grid-item 1/6 mobile-1/3">
-    <a href="https://twitter.com/wijet">
+    <a href="https://wijet.pl">
       <img class="thumbnail" src="/img/avatar-wijet.jpg" alt="Mariusz Pietrzyk">
     </a>
+    <a href="https://wijet.pl">Home page</a>
   </div>
 
   <div class="grid-item 1/6 mobile-1/3">
